<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".forgot_pswd">

    <ImageView
        android:id="@+id/img_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow" />

    <TextView
        android:id="@+id/txt_forgot_pswd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/img_back_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_icon_forgot_pswd"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_pswd_title"
        app:srcCompat="@mipmap/fr_icon" />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text_view"
        android:backgroundTint="#FDFDFD"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint=" Email Address"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_notice"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <Button
        android:id="@+id/btn_forgot_pswd_next"
        android:layout_width="310dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_email" />

    <TextView
        android:id="@+id/txt_notice"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/notice"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_icon_forgot_pswd" />

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your EMail ID"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_icon_forgot_pswd" />

</androidx.constraintlayout.widget.ConstraintLayout>