<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/img_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/txt_res_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/rate"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/img_res"
                app:layout_constraintTop_toBottomOf="@+id/txt_res_name" />

            <TextView
                android:id="@+id/txt_res_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/restaurant_name"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/img_res"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_res_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="9dp"
                android:text="@string/rating"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/txt_res_name" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_res_name"
                app:srcCompat="@drawable/ic_stars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>